# betpulse

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE_CODE_BUILD_SPEC.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dast.yml  release.yml  security.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: bootstrap.py  cli.py  main.py
backend/app/api/: admin.py  auth.py  backtester.py  health.py  ingestion.py  live.py  llm.py  matches.py  models.py  performance.py  promo.py  providers.py  push.py  system.py  users.py
backend/app/core/: arq.py  config.py  crypto.py  db.py  deps.py  redis.py  security.py  security_headers.py
backend/app/ml/: base.py  consensus.py  dixon_coles.py  elo.py  evaluation.py  features.py  glicko2.py  lightgbm_model.py  market.py  metrics.py  mlflow_utils.py  registry.py  training.py  xg.py
backend/app/models/: __init__.py  audit_log.py  backtester.py  base.py  email_verification_token.py  fixture.py  ingestion_run.py  live.py  llm.py  market.py  model_registry.py  model_weighting.py  prediction.py  promo.py  rating.py  reference.py  refresh_token.py  tier.py  user.py
backend/app/providers/: api_football.py  base.py  dtos.py  football_data_couk.py  id_mapping.py  registry.py
backend/app/schemas/: auth.py  backtester.py  ingestion.py  live.py  llm.py  matches.py  models.py  promo.py  providers.py  push.py  system.py  tiers.py  user_admin.py
backend/app/services/: audit.py  auth.py  billing.py  limits.py  model_admin.py  ops_alerts.py  promo.py  providers.py  rate_limit.py  system_health.py  tiers.py  twofa.py  user_admin.py
backend/app/services/backtester/: engine.py  population.py
backend/app/services/ingestion/: football_data.py  quota.py  runner.py
backend/app/services/live/: __init__.py  events.py  ingestion.py  provider.py  push.py  recompute.py
backend/app/services/llm/: analysis.py  config.py  ranking.py  spend.py
backend/app/services/push/: follows.py  telegram_link.py
backend/app/workers/: arq_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_auth.py  0002_domain_core.py  0003_timescale_hypertables.py  0004_model_registry.py  0005_live_push.py  0006_fixture_last_polled.py  0007_tiers.py  0008_promos.py  0009_backtester.py  0010_llm.py  0011_push.py  0012_ingestion_runs.py  0013_model_weighting.py
backend/tests/: conftest.py  test_auth_flow.py  test_auth_service.py  test_bootstrap.py  test_config_security.py  test_health.py  test_providers_documented.py  test_security.py
backend/tests/api/: test_admin_ingestion.py  test_admin_llm_spend.py  test_admin_models.py  test_admin_providers.py  test_admin_system.py  test_admin_users.py  test_backtester.py  test_live_stream.py  test_llm.py  test_matches.py  test_performance.py  test_promo.py  test_push_api.py  test_security_headers.py  test_sensitive_rate_limits.py  test_tiers.py
backend/tests/fixtures/api_football/: live.json  status.json
backend/tests/fixtures/football_data/: E0_2324.csv
backend/tests/ml/: test_dixon_coles_inplay.py  test_methods.py  test_registry.py  test_training_pipeline.py
backend/tests/providers/: test_api_football.py  test_football_data_couk.py  test_id_mapping.py
backend/tests/services/: test_backtester_engine.py  test_ingestion_football_data.py  test_ingestion_runner.py  test_limits.py  test_live_events.py  test_live_ingestion.py  test_live_recompute.py  test_llm_analysis.py  test_llm_ranking.py  test_push.py  test_quota_guard.py
backend/tests/workers/: test_champion_reeval.py  test_live_tasks.py
docs/: DATA_SOURCES.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx  providers.tsx
frontend/app/admin/: AdminLayout.test.tsx  layout.tsx  page.tsx
frontend/app/backtester/: page.tsx
frontend/app/performance/: PerformanceTable.test.tsx  PerformanceTable.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/components/admin/: AuditView.test.tsx  AuditView.tsx  IngestionView.test.tsx  IngestionView.tsx  ModelsView.test.tsx  ModelsView.tsx  PromoView.test.tsx  PromoView.tsx  ProvidersView.test.tsx  ProvidersView.tsx  SpendView.test.tsx  SpendView.tsx  SystemHealthView.test.tsx  SystemHealthView.tsx  TiersView.test.tsx  TiersView.tsx  UsersView.test.tsx  UsersView.tsx
frontend/components/auth/: AuthMenu.tsx  LoginForm.tsx  auth.test.tsx
frontend/components/backtester/: BacktestResults.test.tsx  BacktestResults.tsx  BacktesterView.test.tsx  BacktesterView.tsx
frontend/components/layout/: Footer.tsx  Header.tsx  LanguageSwitcher.test.tsx  LanguageSwitcher.tsx
frontend/components/legal/: AgeGate.test.tsx  AgeGate.tsx  DisclaimerBanner.test.tsx  DisclaimerBanner.tsx
frontend/components/match/: AnalysisBlock.test.tsx  AnalysisBlock.tsx  ConsensusBar.test.tsx  ConsensusBar.tsx  MatchCard.test.tsx  MatchCard.tsx  (+13 more)
frontend/e2e/: browser-security.spec.ts
frontend/i18n/: config.ts  request.ts
frontend/lib/: admin.ts  api.ts  format.ts  push.ts  queries.ts
frontend/messages/: en.json  ru.json
frontend/public/: sw.js
frontend/scripts/: start-standalone.mjs
frontend/test/: fixtures.ts  test-utils.tsx
frontend/types/: admin.ts  auth.ts  backtester.ts  llm.ts  match.ts  push.ts
infra/: Caddyfile  docker-compose.prod.yml  docker-compose.yml
infra/mlflow/: Dockerfile
scripts/: deploy.sh  rollback.sh
(+78 files in other folders)
