[project]
name = "betpulse-backend"
version = "0.1.0"
description = "Football Analytics & ML Prediction Platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "email-validator==2.3.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "argon2-cffi==25.1.0",
    "pyjwt==2.13.0",
    "pyotp==2.10.0",
    # redis and cryptography are held at these versions by arq (<6) and mlflow
    # (cryptography <49); both remain non-vulnerable per pip-audit.
    "redis==5.3.1",
    "cryptography==48.0.1",
    # Pinned above the version uvicorn would otherwise resolve, to clear
    # PYSEC-2026-2132 (fixed in 8.3.3).
    "click==8.4.2",
    # HTTP client for providers; pandas for CSV/feature work (mlflow caps <3).
    "httpx==0.28.1",
    "pandas==2.3.3",
    # ML stack (Phase 4).
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "lightgbm==4.6.0",
    "statsmodels==0.14.6",
    "mlflow==3.14.0",
    "boto3==1.43.47",
    "arq==0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "respx==0.23.1",
    "ruff==0.15.21",
    "mypy==2.3.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
# S101 (assert) is fine in tests; keep it on for application code.

[tool.ruff.lint.per-file-ignores]
# Tests may assert and use throwaway credential literals.
"tests/**" = ["S101", "S105", "S106"]
# Alembic migrations are generated-style: allow long DDL lines.
"migrations/**" = ["E501"]
# Audit action names are constants that contain "token"/"password" substrings.
"app/services/audit.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = [
    "pandas", "pandas.*", "joblib",
    "lightgbm", "lightgbm.*", "statsmodels", "statsmodels.*",
    "sklearn", "sklearn.*", "scipy", "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
